Add missing bibtex reference

--- a/docs/source/references-libertem_holo.bib
+++ b/docs/source/references-libertem_holo.bib
@@ -1,2 +1,13 @@
 % Encoding: UTF-8
 
+@article{Lichte2008,
+	title = {Electron holography–basics and applications},
+	volume = {71},
+	doi = {10.1088/0034-4885/71/1/016102},
+	journal = {Rep. Prog. Phys.},
+	author = {Lichte, H. and Lehmann, M.},
+	year = {2008},
+	pages = {016102},
+	file = {Electron holography—basics and applications - IOPscience:/Users/migunov/Zotero/storage/7C3UUE82/meta\;jsessionid=3F5DA019F9A86C312BFD8889CFC17030.c2.iopscience.cld.iop.html:text/html;Lichte_H,Lehmann_M-E-holog-basics&app(2008).pdf:/Users/migunov/Zotero/storage/WRB52ACC/Lichte_H,Lehmann_M-E-holog-basics&app(2008).pdf:application/pdf}
+}
+
